<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/takePictureButton"
        style="@layout/start_page_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:text="@string/takePicture"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/choosePeopleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/takePictureButton"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:text="@string/choose_people"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/getLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/choosePeopleButton"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:text="@string/get_location"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/captionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/getLocationButton"
        android:gravity="center_horizontal"
        android:text="@string/image_caption"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/captionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/captionTextView"
        android:ems="10"
        android:inputType="text|textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/sendEventButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:text="@string/send_event"
            android:textColor="@android:color/white" />
    </LinearLayout>    

</RelativeLayout>